Fixed dark mode

--- a/src/trs/static/trs/trs.css
+++ b/src/trs/static/trs/trs.css
@@ -9,8 +9,6 @@
     --color-black: #000;
     --spacing: 0.25rem;
     --breakpoint-xl: 80rem;
-    --text-sm: 0.875rem;
-    --text-sm--line-height: calc(1.25 / 0.875);
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
     --font-weight-normal: 400;
@@ -2717,6 +2715,10 @@
   .rounded {
     border-radius: 0.25rem;
   }
+  .border-l-1 {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 1px;
+  }
   .alert-soft {
     @layer daisyui.l1 {
       color: var(--alert-color, var(--color-base-content));
@@ -3215,6 +3217,9 @@ table .header-fixed {
   top: 0px;
   z-index: 1020;
 }
+table .header-copy {
+  background-color: var(--color-base-100);
+}
 table .hide {
   display: none;
 }
@@ -3282,6 +3287,8 @@ form.form-trs label {
 input, select, textarea {
   padding-top: calc(var(--spacing) * 0);
   padding-bottom: calc(var(--spacing) * 0);
+  background-color: var(--color-base-100);
+  color: var(--color-base-content);
 }
 input[type=number] {
   width: calc(var(--spacing) * 20);
@@ -3788,6 +3795,11 @@ th.not-as-header {
     --noise: 0;
   }
 }
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-font-weight {
   syntax: "*";
   inherits: false;
@@ -3910,14 +3922,10 @@ th.not-as-header {
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-border-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-border-style: solid;
       --tw-font-weight: initial;
       --tw-blur: initial;
       --tw-brightness: initial;
@@ -3946,7 +3954,6 @@ th.not-as-header {
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-border-style: solid;
     }
   }
 }
